--- a/style2.css
+++ b/style2.css
@@ -1,6 +1,5 @@
 
 #p1{
-    border-width: 20p;
-    border-color: blueviolet;
-    color: crimson;
+    font-size: 20px;
+    color: darkslateblue;
 }
