--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,12 @@
 
 #p1{
-    font-size: 20px;
+    font-family: fantasy;
+    font-size: 27px;
     color: darkslateblue;
+}
+
+#p2{
+    font-family:fantasy;
+    font-size: 27px;
+    color:darkslateblue;
 }
