--- a/views/nav.html
+++ b/views/nav.html
@@ -9,14 +9,17 @@
             <li class="nav-item">
                 <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="...">A link to another page</a></li>
-                <li><a class="dropdown-item" href="...">Another link to a page</a></li>
-            </ul>
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="test.html">test</a></li>
+                    <li><a class="dropdown-item" href="...">Another link to a page</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="bootstrap.html">Bootstrap assessment</a>
             </li>
         </ul>
     </div>
