--- a/views/nav.html
+++ b/views/nav.html
@@ -15,7 +15,8 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="test.html">test</a></li>
-                    <li><a class="dropdown-item" href="...">Another link to a page</a></li>
+                    <li><a class="dropdown-item" href="hobbypage.html">Hobbies</a></li>
+                    
                 </ul>
             </li>
             <li>
