--- a/views/nav.html
+++ b/views/nav.html
@@ -4,7 +4,7 @@
         <!--Nav bar image-->
         <img src="https://am21.mediaite.com/tms/cnt/uploads/2021/10/Squid-Game.jpg" width="30" height="30" alt="">
       </a>
-    <a class="navbar-brand" href="index.html">Capstone</a>
+    <a class="navbar-brand" href="index.html">Dallia</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
