--- a/style2.css
+++ b/style2.css
@@ -41,3 +41,20 @@ p{
     font-size: 20px;
     
 }
+
+/*Results page*/
+.results1{
+    background-color: green;
+}
+#results1{
+    background-color: green;
+    font-size: 30px;
+}
+
+.results2{
+    background-color: red;
+}
+#results2{
+    background-color: red;
+    font-size: 30px;
+}
