--- a/views/nav.html
+++ b/views/nav.html
@@ -20,7 +20,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="test.html">test</a></li>
                     <li><a class="dropdown-item" href="hobbypage.html">Hobbies</a></li>
-                    
+                    <li><a class="dropdown-item" href="bookpage.html">Books I like to read and why</a></li>
                     
                 </ul>
             </li>
