--- a/views/nav.html
+++ b/views/nav.html
@@ -21,6 +21,7 @@
                     <li><a class="dropdown-item" href="test.html">test</a></li>
                     <li><a class="dropdown-item" href="hobbypage.html">Hobbies</a></li>
                     <li><a class="dropdown-item" href="bookpage.html">Books I like to read and why</a></li>
+                    <li><a class="dropdown-item" href="results.html">Results to test</a></li>
                     
                 </ul>
             </li>
