--- a/style2.css
+++ b/style2.css
@@ -1,4 +1,7 @@
 /*Home page*/
+.introductionbackgroundcolor{
+    background-color: rgb(10, 143, 143);
+}
 .introtitle{
     color: darkslateblue;
     text-decoration-line: underline;
@@ -50,19 +53,23 @@ p{
 }
 
 /*Results page*/
+.resultsbackgroundcolor{
+    background-color: rgba(20, 139, 168, 0.267);
+
+}
 .results1{
-    background-color: green;
+    color: green;
 }
 #results1{
-    background-color: green;
+    color: green;
     font-size: 30px;
 }
 
 .results2{
-    background-color: red;
+    color: red;
 }
 #results2{
-    background-color: red;
+    color:red;
     font-size: 30px;
 }
 
