--- a/views/nav.html
+++ b/views/nav.html
@@ -15,7 +15,7 @@
             </li>
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown
+                    More pages about me
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="hobbypage.html">Hobbies</a></li>
