--- a/views/nav.html
+++ b/views/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(86, 8, 117);">
 <div class="container-fluid">
     <a class="navbar-brand" href="bootstrap.html">
         <!--Nav bar image-->
